@@ -12,6 +12,7 @@ if (! @ARGV){
 }
 
 my $shm_key = $ARGV[0];
+my $erase_all = $ARGV[1] //= 0;
 
 if (! RPi::WiringPi->meta_key_check($shm_key)){
     die "shared memory segment with key '$shm_key' doesn't exist. Can't continue...\n";
@@ -26,7 +27,7 @@ $meta{object_count}--;
 print "\nBEFORE ERASE:\n\n";
 print Dumper \%meta;
 
-$pi->meta_erase;
+$pi->meta_erase($erase_all);
 
 print "\n\nAFTER ERASE:\n\n";
 print Dumper $pi->meta_fetch;
