@@ -10,6 +10,9 @@ Revision history for Perl extension RPi::WiringPi.
           t/999; the meta data and pins are reset at the beginning of a test
           suite run, and again at the end of it (only if necessary)
         - added sample crontab file for automated CI testing at startup
+        - meta_erase() now accepts a second parameter, $all. If left or set
+          false, we'll leave the 'storage' shared memory data intact, if true,
+          we'll delete it with everything else
 
 2.3633_03 2019-11-18
         - added rpi_sudo_check() in RPiTest. All test files that sudo needs to
